# data_pipeline

./: .gitignore  pyproject.toml  requirements.txt
data/: dev_builder.csv
docs/technology_ai/: a-practical-guide-to-building-agents.pkl
test/: postgres_cli.md  test_elastic.ipynb  test_hybridsearch.ipynb  test_postgres.ipynb  test_postgres_builder.ipynb  test_postgres_vessel.ipynb
utils/: setlogger.py
