[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "langchain-elasticsearch>=0.3.2",
    "langchain-ollama>=0.3.10",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "tqdm>=4.67.1",
]
